# atk

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  prek.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: release_guide.md
examples/: README.md  __init__.py  structured.py
examples/chat/: __init__.py  chat_loop.py  display.py  main.py  tools.py
examples/openai/: __init__.py  chat.py  structured.py  tools.py
src/atk/: __init__.py  message.py  model.py
src/atk/core/: __init__.py  message.py  model.py  stream_accumulator.py  tool.py  toolset.py
src/atk/openai/: __init__.py  message.py  model.py  tool.py
src/atk/providers/: __init__.py  message.py  model.py  tool.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py  conftest.py  test_invoke_tool_calls.py  test_stream_accumulator.py  test_tool_from_callable.py  test_tool_from_callable_structured.py  test_tool_json_schema.py  test_toolset.py
tests/unit/providers/: __init__.py  test_message_mapper.py  test_model.py  test_stream_accumulator.py  test_tool_mapper.py
