[project]
name = "atk"
version = "0.2.0"
description = "Agent Toolkit"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
authors = [
    { name = "Timur Çakmakoğlu", email = "timurcakmakoglu@gmail.com" }
]
dependencies = [
    "griffe>=2.0.2",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.29",
]
examples = [
    { include-group = "providers" },
    "rich>=14.3.3",
]
providers = [
    "any-llm-sdk[all]>=1.13.0",
]
